Update SimCardService.java